# oss-data-stack

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-dagster.yml
config/: .env.example
config/alloy/: config.alloy
config/dlt/: config.toml
orchestration/: dagster_cloud.yaml  definitions.py
orchestration/assets/: __init__.py  asset_keys.py  dbt_assets.py  usgs_assets.py
orchestration/jobs/: __init__.py  ingestion_job.py
orchestration/resources/: __init__.py  dbt_resource.py  dlt_resource.py  ducklake_resource.py
orchestration/schedules/: __init__.py  daily_ingestion.py
pipelines/deployment_configs/: usgs_stations.yml
pipelines/usgs/: config.py  pipeline.py  sources.py
scripts/: daemon_health.py  deploy_dagster.sh  duckdb_cli.sh  duckdb_sample_queries.sql  entrypoint-daemon.sh  entrypoint-webserver.sh  init_ducklake.py  setup_dagster_gcp.sh  setup_gcp.sh  start_cloud_sql_proxy.sh  test_pipeline.py
shared/: config.py  database.py
storage/dagster_home/: dagster.yaml
tests/: test_ducklake_config.py
tests/orchestration/: test_asset_keys.py  test_definitions.py
tests/pipelines/: test_usgs_history_window.py
transformations/: .user.yml  dbt_project.yml  profiles.yml
transformations/models/marts/water_metrics/: _water_metrics__models.yml  fct_water_levels_daily.sql
transformations/models/staging/usgs/: _usgs__models.yml  _usgs__sources.yml  stg_usgs__water_levels.sql
